[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/main_menu_gui.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/GUI/options/options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/loading-screen/LoadingScreen.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 2 )

[node name="gui-main-menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 192.0
margin_top = 422.0
margin_right = 527.0
margin_bottom = 622.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b-timed-ride" type="Button" parent="Popup/VBoxContainer"]
margin_right = 335.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "Timed Ride"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b-free-ride" type="Button" parent="Popup/VBoxContainer"]
margin_top = 58.0
margin_right = 335.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "Free ride"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_right = 0.115
anchor_bottom = 1.0
margin_top = 138.0
margin_right = 307.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b-new-game" type="Button" parent="VBoxContainer"]
margin_top = 386.0
margin_right = 335.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 1 )
text = "New Game"

[node name="b-options" type="Button" parent="VBoxContainer"]
margin_top = 444.0
margin_right = 335.0
margin_bottom = 498.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="b-exit" type="Button" parent="VBoxContainer"]
margin_top = 502.0
margin_right = 335.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="Maincontainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -446.5
margin_right = 446.5
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Maincontainer"]
margin_right = 893.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[b]GRAVITY [color=red]ON THE [/color][color=black] MOON[/color][/b]"
text = "GRAVITY ON THE  MOON"
scroll_active = false

[node name="Options" parent="." instance=ExtResource( 3 )]
visible = false

[node name="fade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoadingScreen" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="Popup/VBoxContainer/b-timed-ride" to="." method="_on_btimedride_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/b-free-ride" to="." method="_on_bfreeride_pressed"]
[connection signal="pressed" from="VBoxContainer/b-new-game" to="." method="_on_bnewgame_pressed"]
[connection signal="pressed" from="VBoxContainer/b-options" to="." method="_on_boptions_pressed"]
[connection signal="pressed" from="VBoxContainer/b-exit" to="." method="_on_bexit_pressed"]
[connection signal="back_settings" from="Options" to="." method="_on_Options_back_settings"]
[connection signal="visibility_changed" from="Options" to="." method="_on_Options_visibility_changed"]
